--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,6 +171,8 @@ jobs:
             - "tendermint_linux_arm64"
       - store_artifacts:
           path: /tmp/workspace/tendermint_v0.0.0_linux_arm64.zip
+          destination: tendermint_v0.0.0_linux_arm64.zip
+
 
 
   release_artifacts:
