--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,7 @@ jobs:
             - "*.zip"
             - "tendermint_linux_amd64"
       - store_artifacts:
-          path: /tmp/workspace/tendermint_v0.0.0_linux_arm64.zip
+          path: build/tendermint_v0.0.0_linux_arm64.zip
           destination: tendermint_v0.0.0_linux_arm64.zip
 
 
